# oclsandbox

./: CMakeLists.txt  README.md  envOcl.sh
opencl/: device_picker.hpp
reduction/: CMakeLists.txt  reduce_sum.cl  reducer.cpp
